# Shiba

./: .gitattributes  .gitignore  .npmignore  .prettierrc.json  .rustfmt.toml  .stylelintrc.json  .travis.yml  CHANGELOG.md  Cargo.toml  Guardfile  Makefile  README.md  Rakefile  TODO.md  bower.json  build.rs  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsd.json  tslint.json  typings.json
bench/: Cargo.toml  README.md
bench/assets/: example.md  the_book.md
bench/benches/: bench.rs  bytes.rs  history.rs  markdown.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_markdown.rs
v2/: .eslintrc.json  .gitattributes  .gitignore  .prettierrc.json  .stylelintrc.json  .yamllint.yml  Cargo.toml  Guardfile  LICENSE  Makefile  README.md  build.rs  bundle.mjs  eslint.config.mjs  package-lock.json  package.json  postcss.config.js  tsconfig.json  tsconfig.mjs.json  tslint.json
v2/assets/: README.md
v2/assets/wix/: shiba.wxs
v2/bench/: Cargo.toml  README.md
v2/bench/assets/: example.md
v2/bench/benches/: markdown.rs
v2/bench/src/: lib.rs
v2/docs/: installation.md
v2/fuzz/: Cargo.toml  README.md
v2/fuzz/fuzz_targets/: parse_markdown.rs
v2/main/: config.ts  doghouse.ts  ipc.ts  log.ts  mainu.ts  tsconfig.json  watchdog.ts
v2/main/typings/: channel.d.ts  config.d.ts  electron-window-state.d.ts  lib.d.ts
v2/renderer/: actions.ts  index.html  index.tsx  ipc-send.ts  local_config.ts  log.ts  store.ts  style.css  tsconfig.json
v2/renderer/actions/: preview.ts  type.ts
v2/renderer/components/: app.tsx  dropzone.tsx  landing_page.tsx  markdown.tsx  markdown_test.tsx  path_dialog.tsx  side_menu.tsx
v2/renderer/external_input/: ipc.ts
v2/renderer/markdown/: preset_loader.ts  processor.ts  rehype-message-markers.ts  rehype_message_markers.ts  sanitation_schema.ts
v2/renderer/reducers/: root.ts  tabs.ts
v2/renderer/typings/: hast.d.ts  remark.d.ts  trim-lines.d.ts  unist.d.ts
v2/scripts/: bundle.mjs  gen_macos_app.bash  gen_macos_dmg.bash  install_apt_deps.bash
v2/src/: app.rs  assets.rs  cli.rs  config.rs  default_config.yml  dialog.rs  history.rs  lib.rs  main.rs  markdown.rs  opener.rs  persistent.rs  renderer.rs  sanitizer.rs  sanity.rs  search.rs  shiba.rs  watcher.rs  webview.rs  windows.rs
v2/src/assets/: default_config.yml  icon_256x256.rgba  icon_32x32.rgba  index.html
v2/src/markdown/: mod.rs  parser.rs  sanitizer.rs  search.rs
v2/src/markdown/snapshots/: shiba_preview__markdown__parser__tests__alert.snap  shiba_preview__markdown__parser__tests__all.snap  shiba_preview__markdown__parser__tests__autolink.snap  shiba_preview__markdown__parser__tests__blockquote.snap  shiba_preview__markdown__parser__tests__codeblock.snap  shiba_preview__markdown__parser__tests__emoji.snap  shiba_preview__markdown__parser__tests__emphasis.snap  shiba_preview__markdown__parser__tests__escaped_chars_in_text.snap  shiba_preview__markdown__parser__tests__footnotes.snap  shiba_preview__markdown__parser__tests__highlight.snap  shiba_preview__markdown__parser__tests__image.snap  shiba_preview__markdown__parser__tests__inline_code.snap  shiba_preview__markdown__parser__tests__inline_html_inside_blockquote.snap  shiba_preview__markdown__parser__tests__inline_items_nested_in_inline_html.snap  shiba_preview__markdown__parser__tests__link.snap  shiba_preview__markdown__parser__tests__math.snap  shiba_preview__markdown__parser__tests__not_link.snap  shiba_preview__markdown__parser__tests__offset_after_end.snap  shiba_preview__markdown__parser__tests__offset_begin.snap  shiba_preview__markdown__parser__tests__offset_block.snap  shiba_preview__markdown__parser__tests__paragraph.snap  shiba_preview__markdown__parser__tests__relative_links.snap  shiba_preview__markdown__parser__tests__sanitized.snap  shiba_preview__markdown__parser__tests__soft_and_hard_break.snap  shiba_preview__markdown__parser__tests__strikethrough.snap  shiba_preview__markdown__parser__tests__table.snap  shiba_preview__markdown__parser__tests__tasklist.snap  shiba_preview__markdown__parser__tests__unmatched_inline_html.snap  shiba_preview__markdown__parser__tests__url_inside_link.snap  shiba_preview__markdown__parser__tests__visitor__autolink.snap  shiba_preview__markdown__parser__tests__visitor__blockquote.snap  shiba_preview__markdown__parser__tests__visitor__emoji.snap  shiba_preview__markdown__parser__tests__visitor__footnotes.snap  shiba_preview__markdown__parser__tests__visitor__highlight.snap  shiba_preview__markdown__parser__tests__visitor__math.snap  shiba_preview__markdown__parser__tests__visitor__not_link.snap  shiba_preview__markdown__parser__tests__visitor__paragraph.snap  shiba_preview__markdown__parser__tests__visitor__sanitized.snap  shiba_preview__markdown__parser__tests__visitor__tasklist.snap  shiba_preview__test__markdown__autolink.snap  (+5 more)
v2/src/markdown/testdata/: alert.md  all.md  block_open_inline_close_html.md  emoji.md  inline_html_inside_blockquote.md  inline_open_block_close_html.md  link.md  math.md  not_link.md  offset_block.md  url_inside_link.md
v2/src/test/: markdown.rs  mod.rs
v2/src/test/snapshots/: shiba_preview__test__markdown__codeblock.snap  shiba_preview__test__markdown__emoji.snap  shiba_preview__test__markdown__html.snap  (+8 more)
v2/src/watcher/: mod.rs  system.rs  system_linux.rs
v2/src/wry/: event_loop.rs  menu.rs  mod.rs  state.rs  webview.rs
v2/test/: .eslintrc.json
v2/test/main/: doghouse_test.ts  tsconfig.json  watchdog_test.js  watchdog_test.ts
v2/ui/: index.html  log.ts  style.css
v2/ui/components/: Mermaid.tsx  Outline.tsx  Search.tsx  WindowBar.tsx
v2/web/: css.ts  dispatcher.ts  fence.tsx  index.ts  index.tsx  ipc.ts  keymaps.ts  log.ts  markdown.ts  markdown.tsx  preview.ts  reducer.ts  search.ts  shiba.ts  style.css
v2/web/components/: App.tsx  Article.tsx  CodeBlock.tsx  ConfigContext.ts  Guide.tsx  History.tsx  Link.tsx  ListSearchDialog.tsx  MatcherSelect.tsx  Mathjax.tsx  MenuButton.tsx  Mermaid.tsx  Notification.tsx  Outline.tsx  Palette.tsx  Preview.tsx  Search.tsx  SideBar.tsx  Welcome.tsx  WindowBar.tsx  context.ts  index.tsx
(+248 files in other folders)
