[package]
name = "shiba-preview"
version = "2.0.0-alpha.2"
authors = ["rhysd <lin90162@yahoo.co.jp>"]
description = "Simple markdown previewer"
edition = "2024"
license = "MIT"
repository = "https://github.com/rhysd/Shiba"
homepage = "https://github.com/rhysd/Shiba#readme"
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/build.rs",
    "/assets/icon.ico",
    "!/src/testdata",  # Symlinks in `src/testdata` confuses cargo because cargo builds a crate in a temporary directory and the symlinks are relative.
]
categories = ["gui", "text-processing"]
keywords = ["markdown", "preview", "desktop-app"]

[[bin]]
name = "shiba"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["bench"]

[profile.release]
lto = "thin"
panic = "abort"
codegen-units = 1

[profile.bench]
lto = "thin"

[features]
default = []
devtools = ["wry/devtools"]
__bench = []
__sanity = []

[dependencies]
aho-corasick = "1.1.4"
ammonia = "4.1.2"
anyhow = "1.0.100"
dirs = "6.0.0"
emojis = "0.8.0"
env_logger = { version = "0.11.8", default-features = false, features = ["auto-color"] }
indexmap = { version = "2.13.0", features = ["serde"] }
lexopt = "0.3.1"
log = "0.4.28"
memchr = "2.7.6"
muda = "0.17.1"
notify = "8.2.0"
once_cell = "1.21.3"
open = "5.3.3"
phf = { version = "0.13.1", features = ["macros"] }
pulldown-cmark = { version = "0.13.0", default-features = false, features = [] }
raw-window-handle = "0.6.2"
regex = "1.12.2"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["rc"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tao = { version = "0.34.5", default-features = false, features = [ "rwh_06" ] }
zstd = "0.13.3"

[target.'cfg(target_os = "macos")'.dependencies]
wry = { version = "0.54.1", features = ["transparent"] }
window-vibrancy = "0.7.1"
objc2 = "0.6.3"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSApplication", "NSResponder", "NSImage"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["block2", "NSData"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
wry = "0.54.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_System_Console", "Win32_UI_WindowsAndMessaging"] }

[dev-dependencies]
insta = { version = "1.44.1", features = ["json"] }
tempfile = "3.25.0"

[build-dependencies]
zstd = "0.13.3"

[target.'cfg(windows)'.build-dependencies]
winresource = { version = "0.1.27", default-features = false }

[package.metadata.deb]
name = "shiba"
copyright = "Copyright (c) 2015 rhysd"
pre-depends = ["libwebkit2gtk-4.1-dev", "libxdo-dev", "libgtk-3-dev"]
section = "doc"
assets = [
    ["target/release/shiba", "usr/bin/", "755"],
    ["assets/deb/shiba.desktop", "usr/share/applications/", "644"],
    ["assets/icon.iconset/icon_32x32.png", "usr/share/icons/hicolor/32x32/apps/shiba.png", "644"],
    ["assets/icon.iconset/icon_64x64.png", "usr/share/icons/hicolor/64x64/apps/shiba.png", "644"],
    ["assets/icon.iconset/icon_128x128.png", "usr/share/icons/hicolor/128x128/apps/shiba.png", "644"],
    ["assets/icon.iconset/icon_256x256.png", "usr/share/icons/hicolor/256x256/apps/shiba.png", "644"],
    ["assets/icon.iconset/icon_256x256@2x.png", "usr/share/icons/hicolor/512x512/apps/shiba.png", "644"],
]
