[package]
name = "shiba-bench"
publish = false
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dependencies]
shiba-preview = { path = "..", features = ["__bench"] }

[dev-dependencies]
criterion = "0.8.1"

[[bench]]
name = "markdown"
harness = false
