[package]
name = "shiba-preview-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
shiba-preview = { path = "..", features = ["__bench"] }
libfuzzer-sys = "0.4"
arbitrary = { version = "1.4.1", default-features = false }
oxc_parser = "0.110.0"
oxc_allocator = "0.110.0"
oxc_span = "0.110.0"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "parse_markdown"
path = "fuzz_targets/parse_markdown.rs"
test = false
doc = false
