[package]
name = "shiba-preview"
version = "0.0.0"
authors = ["rhysd <lin90162@yahoo.co.jp>"]
description = "Simple markdown previewer"
edition = "2021"
license = "MIT"
repository = "https://github.com/rhysd/Shiba"
include = ["src", "README.md"]

[[bin]]
name = "shiba"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.0.5"
ammonia = "3.3.0"
anyhow = "1.0.75"
dirs = "5.0.1"
emojis = "0.6.0"
env_logger = "0.10.0"
getopts = "0.2.21"
log = "0.4.20"
memchr = "2.6.1"
muda = "0.8.6"
notify = "6.1.1"
once_cell = "1.18.0"
open = "5.0.0"
phf = { version = "0.11.2", features = ["macros"] }
# https://github.com/raphlinus/pulldown-cmark/pull/622
pulldown-cmark = { git = "https://github.com/rhysd/pulldown-cmark.git", branch="math-0.9.3", default-features = false, features = [] }
regex = "1.9.4"
rfd = "0.11.4"
serde = "1.0.188"
serde_json = "1.0.105"
serde_yaml = "0.9.25"
wry = "0.31.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48.0", features = ["Win32_Foundation", "Win32_System_Console"] }

[features]
default = []
__bench = []
devtools = ["wry/devtools"]

[workspace]
members = ["bench"]

[profile.bench]
lto = "thin"

[dev-dependencies]
insta = { version = "1.31.0", features = ["json"] }

[target.'cfg(windows)'.build-dependencies]
winresource = { version = "0.1.17", default-features = false }

[package.metadata.deb]
name = "shiba"
copyright = "Copyright (c) 2015 rhysd"
pre-depends = "libwebkit2gtk-4.1-dev"
section = "doc"
assets = [
    ["target/release/shiba", "usr/bin/", "755"],
    ["assets/deb/shiba.desktop", "usr/share/applications/", "644"],
    ["assets/icon.iconset/icon_32x32.png", "usr/share/icons/hicolor/32x32/apps/shiba.png", "644"],
    ["assets/icon.iconset/icon_64x64.png", "usr/share/icons/hicolor/64x64/apps/shiba.png", "644"],
    ["assets/icon.iconset/icon_128x128.png", "usr/share/icons/hicolor/128x128/apps/shiba.png", "644"],
    ["assets/icon.iconset/icon_256x256.png", "usr/share/icons/hicolor/256x256/apps/shiba.png", "644"],
    ["assets/icon.iconset/icon_256x256@2x.png", "usr/share/icons/hicolor/512x512/apps/shiba.png", "644"],
]
