[package]
name = "shiba-preview"
version = "0.0.0"
authors = ["rhysd <lin90162@yahoo.co.jp>"]
description = "Simple markdown previewer"
edition = "2021"
license = "MIT"
repository = "https://github.com/rhysd/Shiba"
homepage = "https://://github.com/rhysd/Shiba#readme"
include = ["/src", "/README.md"]

[[bin]]
name = "shiba"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["bench"]

[profile.release]
lto = "thin"
panic = "abort"
codegen-units = 1

[profile.bench]
lto = "thin"

[features]
default = []
devtools = ["wry/devtools"]
__bench = []
__sanity = []

[dependencies]
aho-corasick = "1.1.3"
ammonia = "4.0.0"
anyhow = "1.0.97"
dirs = "6.0.0"
emojis = "0.6.4"
env_logger = { version = "0.11.8", default-features = false, features = ["auto-color"] }
lexopt = "0.3.1"
log = "0.4.27"
memchr = "2.7.4"
muda = "0.16.1"
notify = "8.0.0"
once_cell = "1.21.3"
open = "5.3.2"
phf = { version = "0.11.3", features = ["macros"] }
pulldown-cmark = { version = "0.13.0", default-features = false, features = [] }
regex = "1.11.1"
rfd = "0.15.3"
serde = "1.0.219"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tao = { version = "0.33.0", default-features = false, features = [ "rwh_06" ] }

[target.'cfg(target_os = "macos")'.dependencies]
wry = { version = "0.51.0", features = ["transparent"] }
window-vibrancy = "0.6.0"

[target.'cfg(not(target_os = "macos"))'.dependencies]
wry = "0.51.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.1", features = ["Win32_Foundation", "Win32_System_Console", "Win32_UI_WindowsAndMessaging"] }

[dev-dependencies]
insta = { version = "1.42.2", features = ["json"] }

[target.'cfg(windows)'.build-dependencies]
winresource = { version = "0.1.20", default-features = false }

[package.metadata.deb]
name = "shiba"
copyright = "Copyright (c) 2015 rhysd"
pre-depends = ["libwebkit2gtk-4.1-dev", "libxdo-dev", "libgtk-3-dev"]
section = "doc"
assets = [
    ["target/release/shiba", "usr/bin/", "755"],
    ["assets/deb/shiba.desktop", "usr/share/applications/", "644"],
    ["assets/icon.iconset/icon_32x32.png", "usr/share/icons/hicolor/32x32/apps/shiba.png", "644"],
    ["assets/icon.iconset/icon_64x64.png", "usr/share/icons/hicolor/64x64/apps/shiba.png", "644"],
    ["assets/icon.iconset/icon_128x128.png", "usr/share/icons/hicolor/128x128/apps/shiba.png", "644"],
    ["assets/icon.iconset/icon_256x256.png", "usr/share/icons/hicolor/256x256/apps/shiba.png", "644"],
    ["assets/icon.iconset/icon_256x256@2x.png", "usr/share/icons/hicolor/512x512/apps/shiba.png", "644"],
]
